-wrapper + limitador
