# src/validators/auth.validator.ts
@@ -24,3 +24,19 @@ export const loginSchema = z.object({
     .string()
     .min(1, 'La contraseña no puede estar vacía.'),
 });
+
+export const olvidePasswordSchema = z.object({
+  email: z
+    .string()
+    .email('El correo no es válido.')
+    .min(1, 'El correo es requerido.'),
+});
+
+export const restablecerPasswordSchema = z.object({
+  token: z
+    .string()
+    .min(1, 'El token no puede estar vacío.'),
+  password: z
+    .string()
+    .min(6, 'La contraseña debe tener al menos 6 caracteres.'),
+});
